--- a/doc.css/style.css
+++ b/doc.css/style.css
@@ -9,13 +9,14 @@ body{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: rgb(25, 25, 25);
 }
 
 .one{
     text-align: center;
-    width:60%;
+    width:80%;
     height:100%;
-    margin-top : 30px;
+    margin-top : 75px;
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -23,50 +24,90 @@ body{
 }
 
 .input{
-    width:35%;
+    width:75%;
     height:100%;
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    gap: 30px;
 }
 
-
-#row{
-    
+#row{ 
     display: flex;
     flex-direction: row;
-
 }
-
 
 #boxes{
-    width:50px;
-    height:50px;
-  
+    width:175px;
+    height:175px;
+    line-height:175px;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    margin: 2.5px;
 }
-.middle{
-    width:20%;
-    height:100%;
+
+#legend {
+    height: 100%;
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    gap: 5rem;
-    align-self: flex-end;
+    gap: 5px;
 }
 
 #grad {
-    background-image: linear-gradient(white, black);
-    width: 15px;
-    height: 150px;
-  }
+    background-image: linear-gradient(red, blue);
+    width: 30px;
+    height: 535px;
+    margin: 2.5px;
+}
 
-.output{
-    width:35%;
-    height:100%;
+#scale {
+    height: 525px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
+}
+
+#scale_number {
+    margin-block-start: 0em;
+    margin-block-end: 0em;
+    color: white;
+    font-size:20px;
+}
+
+.output{
+    width:25%;
+    height:525px;
+    display: flex;
+    flex-direction: column;
+    justify-content:center;
     align-items: center;
+}
+
+#result{
+    width:175px;
+    height:235px;
+    background-color: rgb(50, 50, 50);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+#titleResult{
+    color: white;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    font-size: 18px;
+    line-height:55px;
+    border-bottom: 5px;
+    border-top: 0px;
+    border-left: 0px;
+    border-right: 0px;
+    border-style: solid;
+    border-color: rgb(25, 25, 25);
+    
+}
+
+#outputResult{
+    line-height:175px;
+    margin-block-start: 0px;
+    margin-block-end: 0px;
 }
